# zed

./: Cargo.toml  MOBILE_COMPANION_PLAN.md  README.md
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json
crates/alacritty_terminal/: Cargo.toml
crates/alacritty_terminal/src/: event_loop.rs
crates/project/src/: project.rs
crates/recent_projects/src/: recent_projects.rs
crates/settings/src/: vscode_import.rs
crates/settings_content/src/: terminal.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: terminal.rs  terminal_settings.rs
crates/terminal_view/src/: terminal_view.rs
crates/theme_settings/src/: theme_settings.rs
crates/workspace/src/: persistence.rs  workspace.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
crates/zed/src/zed/: app_menus.rs
crates/zed_actions/src/: lib.rs
crates/zed_local_api/: Cargo.toml
crates/zed_local_api/src/: zed_local_api.rs
