[package]
name = "zed_local_api"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/zed_local_api.rs"

[dependencies]
anyhow.workspace = true
axum = { version = "0.6", features = ["json", "ws"] }
bytes.workspace = true
futures.workspace = true
gpui.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
terminal.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
tower-http = { version = "0.4", features = ["cors"] }
